--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -4,6 +4,20 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  opacity: 1;
+  animation-name: fadeInOpacity;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in;
+  animation-duration: 2s;
+}
+
+@keyframes fadeInOpacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .landing-documents {
@@ -11,3 +25,5 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+
+
