feat: create new single comment

--- a/src/index.css
+++ b/src/index.css
@@ -25,10 +25,12 @@ code {
 
 .commentColorWhite {
   color: white !important;
+  font-size: 1.25em !important;
 }
 
 .commentColorBlue {
   color: #61dafb !important;
+  font-size: 1.15em !important;
 }
 
 .commentColorFill {
